--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -20,6 +20,7 @@
         <article>
             <h1>Welcome to My Homepage</h1>
             <p>Hello, world!</p>
+             class="works_on_smartphone"
             <p>Check out my tweets: <a href="tweets.html">Tweets Page</a></p>
 
             <!-- Table of learners -->
