--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -13,6 +13,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
+        <div class="logo">
+        <h1>My Basic Page</h1>
+    </div>
     </header>
 
     <!-- Main content -->
