--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,35 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smile School</title>
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
-<body class="works_on_smartphone">
+<body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/150x50?text=Smile+School" alt="Smile School Logo" class="logo">
+            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+          
             <ul>
                 <li><a href="#">COURSE</a></li>
                 <li><a href="#">PRICING</a></li>
                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
+        
     </header>
-
     <main>
-        <!-- Hero Section -->
-        <section class="hero">
-            <div class="hero-text">
-                <h1>Get Schooled</h1>
+        <section>
+            <div>
+                <h1>Get schooled</h1>
                 <span>SMILES</span>
                 <span>GRIN</span>
                 <span>LAUGH</span>
                 <button>REGISTER FOR FREE</button>
             </div>
-            <div class="hero-pros">
+            <div>
                 <h2>Learn from the pros</h2>
-                <div class="pros-cards">
+                <div>
                     <div>
                         <img src="./images/1 (3).png" alt="">
                         <h3>Phillip Massey</h3>
@@ -55,46 +54,88 @@
                 </div>
             </div>
         </section>
-
-        <!-- Testimonials Section -->
-        <section class="testimonials">
+        <section>
             <div>
                 <img src="./images/Bitmap.png" alt="image">
             </div>
             <div>
-                <blockquote>
-                    « Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!»
-                </blockquote>
+                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
                 <h3>NAME</h3>
-                <p>Weather Presenter</p>
+                <P>weather presenter</P>
             </div>
         </section>
-
-        <!-- Popular Tutorials Section -->
-        <section class="popular-tutorials">
+        <section>
             <h2>Most popular tutorials</h2>
-            <div class="tutorial-card">
+            <div>
                 <img src="./images/Bitmap (1).png" alt="">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div class="author">
+                <div>
                     <img src="./images/1 (3).png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
                 </div>
                 <p>8 min</p>
             </div>
-            <!-- Repeat tutorial-card for other tutorials -->
+            <div>
+                <img src="./images/Bitmap (4).png" alt="">
+                <h3>Happy Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p>8 min</p>
+            </div>
+            <div>
+                <img src="./images/Bitmap (3).png" alt="">
+                <h3>Natural Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p>8 min</p>
+            </div>
+            <div>
+                <img src="./images/Bitmap (2).png" alt="">
+                <h3>Sad Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p>8 min</p>
+            </div>
         </section>
-
-        <!-- Free Membership Section -->
-        <section class="free-membership">
+        <section>
             <h2>Free membership</h2>
             <div>
                 <img src="./images/smile.svg" alt="">
@@ -118,9 +159,7 @@
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
-
-        <!-- FAQ Section -->
-        <section class="faq">
+        <section>
             <h2>F.A.Q</h2>
             <div>
                 <div>
@@ -128,7 +167,14 @@
                         <h3>How does this work?</h3>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
                 <div>
@@ -136,24 +182,29 @@
                         <h3>How does this work?</h3>
                     </div>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
     <footer>
         <section>
             <div>
-                <img src="https://fakeimg.pl/150x50?text=Smile+School" alt="Smile School Logo">
+                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
-            <p>© Smile School 2020</p>
+            <p>©smileschool 2020</p>
         </section>
     </footer>
 </body>
