--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -80,25 +80,25 @@
         <div class="results-row">
 
             <div class="result-box">
-                <img src="images/pentagon.png" alt="Pentagon shape">
+                <img src="images\pentagone.png" alt="Pentagon shape">
                 <h3>+2%</h3>
                 <p>Performance</p>
             </div>
 
             <div class="result-box">
-                <img src="images/pentagon.png" alt="Pentagon shape">
+                <img src="images\pentagone.png" alt="Pentagon shape">
                 <h3>+50%</h3>
                 <p>Efficiency</p>
             </div>
 
             <div class="result-box">
-                <img src="images/pentagon.png" alt="Pentagon shape">
+                <img src="images\pentagone.png" alt="Pentagon shape">
                 <h3>+90%</h3>
                 <p>Success</p>
             </div>
 
             <div class="result-box">
-                <img src="images/pentagon.png" alt="Pentagon shape">
+                <img src="images\pentagone.png" alt="Pentagon shape">
                 <h3>+12%</h3>
                 <p>Growth</p>
             </div>
